# Embedded-Project

./: CMakeLists.txt  QUICK_START.md  README.md  SETUP_WINDOWS.md  STATUS.md  WIRING_FULL.md  WIRING_NO_RAIL.md  main.cpp  main_test_no_rail.cpp
include/: config.h
lib/buttons/: Buzzer.cpp  Buzzer.h  CMakeLists.txt  PushButton.cpp  PushButton.h
lib/keypad/: CMakeLists.txt  Keypad4x4.cpp  Keypad4x4.h
lib/motor/: CMakeLists.txt  MotorDriver.cpp  MotorDriver.h
lib/servo/: CMakeLists.txt  ServoController.cpp  ServoController.h
lib/ultrasonic/: CMakeLists.txt  Ultrasonic.cpp  Ultrasonic.h
